# cli-weather-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/implementors/alloc/string/: trait.ToString.js
doc/implementors/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/strum/: trait.IntoEnumIterator.js
doc/src/weather/: cli.rs.html  config.rs.html  main.rs.html  providers.rs.html
doc/weather/: all.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
doc/weather/cli/: enum.Command.html  enum.ProviderKind.html  fn.parse_date.html  fn.parse_provider_kind.html  index.html  sidebar-items.js  struct.Cli.html  struct.ProviderKindIter.html
doc/weather/config/: constant.CONFIG_FILE_PATH.html  fn.select_provider.html  index.html  sidebar-items.js  struct.Config.html
doc/weather/providers/: constant.APP_USER_AGENT.html  constant.TIMEOUT_SECONDS.html  index.html  sidebar-items.js  struct.ProviderHandle.html  struct.Weather.html  trait.WeatherProvider.html
src/: cli.rs  config.rs  main.rs  providers.rs
src/providers/: accu_weather.rs  open_weather.rs
(+28 files in other folders)
