[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
dialoguer = "0.10.3"
anyhow = "1.0.70"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
iso_country = "0.1.4"
strum = { version = "0.24.1", features = ["derive"]}
chrono = "0.4.24"
